--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "combindma/dash-ui": "^1.1",
         "kyon147/laravel-shopify": "^21.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
